--- a/cadastroTor.html
+++ b/cadastroTor.html
@@ -19,31 +19,31 @@
                     <li>
                          <label for="name">&nbsp;&nbsp;&nbsp;Nome:&nbsp;</label>
                          <input type="text" size="33" id="name" name="nameA" max="31">
-                         <label for="name">&nbsp;&nbsp;Sexo:</label>
+                         <label for="sexo">&nbsp;&nbsp;Sexo:</label>
                          <select>
                             <option value="masculino">Masculino</option>
                             <option value="feminino">Feminino</option>                            
                            </select>
-                         <label for="name">D.N:&nbsp;</label>
-                         <input type="text" size="12" id="name" name="nameA" max="31">
+                         <label for="data">D.N:&nbsp;</label>
+                         <input type="text" size="12" id="data" name="data" max="31">
                     </li>
                     <br><br>
                     <li>
-                     <label for="name">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CPF:&nbsp;</label>
-                     <input type="text" size="24" id="name" name="nameA" max="31">
-                     <label for="name">&nbsp;Email:</label>
-                     <input type="text" size="15" id="name" name="nameA" max="31">
-                     <label for="name">&nbsp;&nbsp;&nbsp;&nbsp;Tel:&nbsp;</label>
-                     <input type="text" size="12" id="name" name="nameA" max="31">
+                     <label for="CPF">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CPF:&nbsp;</label>
+                     <input type="text" size="24" id="CPF" name="CPF" max="31">
+                     <label for="email">&nbsp;Email:</label>
+                     <input type="text" size="15" id="email" name="email" max="31">
+                     <label for="tel">&nbsp;&nbsp;&nbsp;&nbsp;Tel:&nbsp;</label>
+                     <input type="text" size="12" id="telefone" name="telefone" max="31">
                     </li>
                     <br><br>
                     <li>
                          <label for="name">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;End:&nbsp;</label>
-                         <input type="text" size="24" id="name" name="nameA" max="31">
+                         <input type="text" size="24" id="endereco" name="endereco" max="31">
                          <label for="name">&nbsp;Bairro:&nbsp;</label>
-                         <input type="text" size="15" id="name" name="nameA" max="31">
+                         <input type="text" size="15" id="bairro" name="bairro" max="31">
                          <label for="name">Cidade:</label>
-                         <input type="text" size="10" id="name" name="nameA" max="31">
+                         <input type="text" size="10" id="cidade" name="cidade" max="31">
                     </li>
                     <br><br>
                     <li id="posiBotao">
