--- a/listJogadores.html
+++ b/listJogadores.html
@@ -28,7 +28,7 @@
     <table class= "container" id="table"> 
         <tr>
             <th> Nome </th>
-            <th> email </th>
+            <th> CPF </th>
             <th> Nascimento </th>
             <th> Endereco </th>
             <th> numero </th>
@@ -38,6 +38,7 @@
             <th> telefone </th>
             <th> email </th>
             <th> posicao </th>
+            <th> Salario</th>
             <th> contrato </th>
             <th> status </th>
         </tr>
