--- a/adm.html
+++ b/adm.html
@@ -19,16 +19,16 @@
            </ul> 
 
            <ul id="listaMenuAdm">
-               <li id="itemListaAdm">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;DIRETORIA</li>
-               <li id="itemListaAdm">&nbsp;COMISSÃO TECNICA</li> 
-               <li id="itemListaAdm">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;JOGADORES</li>
-               <li id="itemListaAdm">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;FINANÇAS</li>
-               <li id="itemListaAdm">&nbsp;&nbsp;PATROCINADORES</li>
-               <li id="itemListaAdm">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;TORCEDORES</li>
+               <a href=""><li id="itemListaAdm">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;DIRETORIA</li></a>
+               <a href=""><li id="itemListaAdm">&nbsp;COMISSÃO TECNICA</li> </a>
+               <a href="cadJogador.html"><li id="itemListaAdm">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;JOGADORES</li></a>
+               <a href=""><li id="itemListaAdm">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;FINANÇAS</li></a>
+               <a href=""><li id="itemListaAdm">&nbsp;&nbsp;PATROCINADORES</li></a>
+               <a href="listTorcedores.html"><li id="itemListaAdm">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;TORCEDORES</li></a>
 
            </ul>
            <ul id="listaBotaoSair">
-               <li id="itemSair"> &nbsp;&nbsp;Sair </li>
+               <a href="Trab.html"><li id="itemSair"> &nbsp;&nbsp;Sair </li></a>
 
            </ul>
 
