--- a/Trab.html
+++ b/Trab.html
@@ -33,7 +33,7 @@
         <nav id="menusuperior"><!--NAV PARA O MENU SUPERIOR-->
             <ul>                   
                     
-                    <li><a id="inicio"> &nbsp;SEJA TORCEDOR &nbsp;</a></li>                        
+                    <li><a id="inicio" href="cadastroTor.html"> &nbsp;SEJA TORCEDOR &nbsp;</a></li>                        
                     <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;HISTORIA</li>
                     <li>&nbsp;CONQUISTAS</li>
             </ul>
@@ -70,8 +70,8 @@
         <ul id="menulateral"><!--NAV PARA O MENU LATERAL-->               
                 <li id="nomemenu">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 &nbsp;&nbsp;&nbsp;&nbsp;MENU</li>                  
-                <li id="menulateralItens">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;JOGADORES</li>
+                <a href="listJogadoresPub.html"><li id="menulateralItens">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;JOGADORES</li></a>
                 <li id="menulateralItens">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 &nbsp;COMISSÃO TECNICA</li>
                 <li id="menulateralItens">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
