--- a/adm.html
+++ b/adm.html
@@ -21,7 +21,8 @@
            <ul id="listaMenuAdm">
                <a href=""><li id="itemListaAdm">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;DIRETORIA</li></a>
                <a href=""><li id="itemListaAdm">&nbsp;COMISSÃO TECNICA</li> </a>
-               <a href="cadJogador.html"><li id="itemListaAdm">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;JOGADORES</li></a>
+               <a href="cadJogador.html"><li id="itemListaAdm">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CADASTRO DE JOGADORES</li></a>
+               <a href="listJogadores.html"><li id="itemListaAdm">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;LISTA DE JOGADORES</li></a>
                <a href=""><li id="itemListaAdm">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;FINANÇAS</li></a>
                <a href=""><li id="itemListaAdm">&nbsp;&nbsp;PATROCINADORES</li></a>
                <a href="listTorcedores.html"><li id="itemListaAdm">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;TORCEDORES</li></a>
