--- a/cadJogador.html
+++ b/cadJogador.html
@@ -100,7 +100,7 @@
                     <li id="posiBotao">
                         <input type="reset" id="botao_clear" value="CORRIGIR">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        <input type="submit" id="botao_add" value="SALVAR" onclick="cadastraJogador(nome, cpf, nascimento, end, nº, bairro, cidade, cep, tel,
+                        <input type="button" id="botao_add" value="SALVAR" onclick="cadastraJogador(nome, cpf, nascimento, end, nº, bairro, cidade, cep, tel,
                         email, posicao, salario, contrato, status)"> 
                         <input type="button" id="botao_amd" value="VOLTAR para ADM" onclick="window.location='adm.html' ">
                     </li>
