--- a/listJogadores.html
+++ b/listJogadores.html
@@ -43,7 +43,10 @@
             <th> status </th>
         </tr>
     </table>
-
+    <li id="botaovoltar" >
+        <input type="button" id="botao_amd" value="VOLTAR para ADM" onclick="window.location='adm.html' ">
+        <input type="button" id="botao_amd" value="apagar todos os cadastros" onclick="limpar()">
+    </li>
   </div>
         
 </body>
