--- a/adm.html
+++ b/adm.html
@@ -29,7 +29,7 @@
 
            </ul>
            <ul id="listaBotaoSair">
-               <a href="Trab.html"><li id="itemSair"> &nbsp;&nbsp;Sair </li></a>
+               <a href="telaInicial.html"><li id="itemSair"> &nbsp;&nbsp;Sair </li></a>
 
            </ul>
 
