--- a/listJogadoresPub.html
+++ b/listJogadoresPub.html
@@ -30,7 +30,7 @@
         </tr>
     </table>
     <li id="botaovoltar" >
-        <input type="button" id="botao_amd" value="INICIO" onclick="window.location='Trab.html' ">
+        <input type="button" id="botao_amd" value="INICIO" onclick="window.location='telaInicial.html' ">
     </li>
 </body>
 </html>
