--- a/cadastroTor.html
+++ b/cadastroTor.html
@@ -48,7 +48,7 @@
                     </li>
                     <br><br>
                     <li id="posiBotao">
-                        <input type="button" id="botaoVoltar" value="VOLTAR" onclick="window.location='Trab.html'">
+                        <input type="button" id="botaoVoltar" value="VOLTAR" onclick="window.location='telaInicial.html'">
                         <a href="inicio"></a>
                         <input type="reset" id="botao_clear" value="CORRIGIR">
                         
